fixing github actions workflow v3 to v4